# GeneralsOnlineClient

./: .gitignore  CMakeLists.txt  MISMATCH_NOTES.md  Makefile  PopupPickReplay.wnd
Core/GameEngine/: CMakeLists.txt
Core/GameEngine/Include/GameClient/: Color.h  GameText.h  MapUtil.h  Smudge.h
Core/GameEngine/Include/GameNetwork/: GameInfo.h  LANAPI.h  LANObserverStream.h  NetworkInterface.h
Core/GameEngine/Source/Common/: FramePacer.cpp
Core/GameEngine/Source/Common/System/: FileSystem.cpp
Core/GameEngine/Source/GameClient/: GameText.cpp  MapUtil.cpp
Core/GameEngine/Source/GameClient/GUI/: LoadScreen.cpp  ProcessAnimateWindow.cpp
Core/GameEngine/Source/GameNetwork/: ConnectionManager.cpp  GameInfo.cpp  LANAPI.cpp  LANAPICallbacks.cpp  LANAPIhandlers.cpp  LANObserverStream.cpp  Network.cpp
Core/GameEngine/Source/GameNetwork/GameSpy/: LobbyUtils.cpp  PeerDefs.cpp
Core/GameEngineDevice/Include/W3DDevice/GameClient/: WorldHeightMap.h
Core/GameEngineDevice/Source/MilesAudioDevice/: MilesAudioManager.cpp
Core/GameEngineDevice/Source/VideoDevice/FFmpeg/: FFmpegFile.cpp  FFmpegVideoPlayer.cpp
Core/GameEngineDevice/Source/W3DDevice/GameClient/: W3DMouse.cpp  W3DTerrainTracks.cpp  W3DTreeBuffer.cpp  W3DView.cpp
Core/Libraries/Source/WWVegas/WW3D2/: textureloader.cpp
Core/Libraries/Source/WWVegas/WWLib/: Except.cpp  hashtemplate.h  mutex.cpp  mutex.h
Generals/Code/GameEngine/Include/Common/: Overridable.h  PerfTimer.h
Generals/Code/GameEngine/Source/Common/INI/: INIMapCache.cpp
Generals/Code/GameEngine/Source/Common/RTS/: Player.cpp
Generals/Code/GameEngine/Source/Common/System/: GameMemory.cpp  StackDump.cpp
Generals/Code/GameEngine/Source/GameClient/GUI/ControlBar/: ControlBar.cpp
Generals/Code/GameEngine/Source/GameClient/GUI/GUICallbacks/Menus/: LanGameOptionsMenu.cpp  ScoreScreen.cpp  WOLWelcomeMenu.cpp
Generals/Code/GameEngine/Source/GameClient/GUI/Gadget/: GadgetPushButton.cpp
Generals/Code/GameEngine/Source/GameClient/MessageStream/: CommandXlat.cpp
Generals/Code/GameEngine/Source/GameLogic/Object/: PartitionManager.cpp
Generals/Code/GameEngine/Source/GameLogic/Object/Update/AIUpdate/: SupplyTruckAIUpdate.cpp
Generals/Code/GameEngineDevice/Source/W3DDevice/GameClient/: W3DDisplay.cpp
GeneralsMD/Code/GameEngine/: CMakeLists.txt
GeneralsMD/Code/GameEngine/Include/Common/: GlobalData.h  LobbyDiscord.h  Overridable.h  PerfTimer.h  Player.h  Recorder.h  StatsExporter.h  StatsUploader.h  Team.h  WellKnownKeys.h
GeneralsMD/Code/GameEngine/Include/GameClient/: ReplayMenu.h
GeneralsMD/Code/GameEngine/Include/GameLogic/: AIPlayer.h  AISkirmishPlayer.h  ScriptConditions.h  Scripts.h
GeneralsMD/Code/GameEngine/Include/GameLogic/Module/: TransportContain.h
GeneralsMD/Code/GameEngine/Include/GameNetwork/: RandomAssign.h
GeneralsMD/Code/GameEngine/Include/GameNetwork/GeneralsOnline/: NGMP_include.h  OnlineServices_Init.h
GeneralsMD/Code/GameEngine/Source/Common/: CommandLine.cpp  GameEngine.cpp  GlobalData.cpp  LobbyDiscord.cpp  Recorder.cpp  StatsExporter.cpp  StatsUploader.cpp
GeneralsMD/Code/GameEngine/Source/Common/INI/: INIMapCache.cpp
GeneralsMD/Code/GameEngine/Source/Common/RTS/: Player.cpp  Team.cpp
GeneralsMD/Code/GameEngine/Source/Common/System/: FunctionLexicon.cpp  GameMemory.cpp  StackDump.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/: InGameUI.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/GUI/ControlBar/: ControlBar.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/GUI/GUICallbacks/Menus/: GameInfoWindow.cpp  LanGameOptionsMenu.cpp  LanMapSelectMenu.cpp  OptionsMenu.cpp  PopupPickReplay.cpp  ReplayMenu.cpp  ScoreScreen.cpp  SkirmishGameOptionsMenu.cpp  WOLGameSetupMenu.cpp  WOLLobbyMenu.cpp  WOLQuickMatchMenu.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/GUI/Gadget/: GadgetPushButton.cpp
GeneralsMD/Code/GameEngine/Source/GameClient/MessageStream/: CommandXlat.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/AI/: AIPlayer.cpp  AISkirmishPlayer.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/Object/: PartitionManager.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/Object/Contain/: TransportContain.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/ScriptEngine/: ScriptConditions.cpp  ScriptEngine.cpp  VictoryConditions.cpp
GeneralsMD/Code/GameEngine/Source/GameLogic/System/: GameLogic.cpp  GameLogicDispatch.cpp
GeneralsMD/Code/GameEngine/Source/GameNetwork/: GUIUtil.cpp  RandomAssign.cpp
GeneralsMD/Code/GameEngine/Source/GameNetwork/GeneralsOnline/: NetworkMesh.cpp  NextGenTransport.cpp  OnlineServices_Init.cpp  OnlineServices_RoomsInterface.cpp  PluginInterfaces.cpp
GeneralsMD/Code/GameEngine/Source/GameNetwork/GeneralsOnline/HTTP/: HTTPManager.cpp
GeneralsMD/Code/GameEngineDevice/Source/W3DDevice/GameClient/: W3DDisplay.cpp
GeneralsMD/Code/GameEngineDevice/Source/Win32Device/Common/: Win32GameEngine.cpp
GeneralsMD/Code/Main/: CMakeLists.txt  RTS.RC
assets/Data/English/: GeneralsExtras.str  generals.csf
assets/Data/English/Art/Textures/: ZuluCrate.tga  ZuluDerrick.tga
assets/Data/INI/: GameData.ini
assets/Data/INI/MappedImages/HandCreated/: ZuluMapPreviewIcons.ini
assets/Data/INI/Multiplayer/: ZuluColors.ini
assets/Data/Scripts/: SkirmishScripts.scb
assets/Window/: LanGameOptionsMenu.wnd
assets/Window/Menus/: LanMapSelectMenu.wnd
cmake/: DiscordWebhook.h.in  ZuluClientKey.h.in  discordwebhook.cmake  zuluclientkey.cmake
docs/: README.md  headless-replay.md  installer-build.md  lan-lobby-discord.md  lan-lobby-ui.md  lan-observer-mode.md  launcher-auto-update.md  mapcache-split.md  player-colors.md  resume-from-replay.md  skirmish-ai.md  slide-anim-snap.md  tactical-ai.md  telemetry-uploads.md  terrain-and-camera.md
docs/design/: optimistic-hotkey-groups.md
installer/: Zulu.nsi
launcher/: CMakeLists.txt  ZuluLauncher.cpp  ZuluLauncher.manifest  ZuluLauncher.rc.in
resources/dockerbuild/: entrypoint.sh
resources/dockerbuild-msvc/: entrypoint.sh
scripts/: docker-build-msvc.sh  docker-build.sh
tools/desync-repro/: README.md  check_desync.ps1  repro.ahk
(+2 files in other folders)
