add_executable(z_generals WIN32)

# Use a binary name that doesn't conflict with original game.
if("${CMAKE_SYSTEM}" MATCHES "Windows")
    set_target_properties(z_generals PROPERTIES OUTPUT_NAME GeneralsOnlineZH)
else()
    set_target_properties(z_generals PROPERTIES OUTPUT_NAME GeneralsOnlineZH)
endif()

target_link_libraries(z_generals PRIVATE
    binkstub
    comctl32
    core_debug
    core_profile
    d3d8
    d3dx8
    dinput8
    dxguid
    imm32
    milesstub
    vfw32
    winmm
    z_gameengine
    z_gameenginedevice
    zi_always
)

# TODO Originally referred to build host and user, replace with git info perhaps?
file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/GeneratedVersion.h
"#pragma once

#define VERSION_LOCALBUILDNUM 0
#define VERSION_BUILDUSER \"\"
#define VERSION_BUILDLOC \"\"
"
)

# Defaults match the original retail binary's reported values. `make installer`
# overrides these via -DZULU_VERSION_* (parsed out of APPVERSION in
# installer/Zulu.nsi by the top-level Makefile) so the binary's TheVersion
# matches the installer version, which in turn flows into every replay
# header recorded by that binary (Recorder.cpp:608-615). Plain `cmake`
# builds outside the Make pipeline keep the retail-style defaults.
if(NOT DEFINED ZULU_VERSION_MAJOR)
    set(ZULU_VERSION_MAJOR 1)
endif()
if(NOT DEFINED ZULU_VERSION_MINOR)
    set(ZULU_VERSION_MINOR 4)
endif()
if(NOT DEFINED ZULU_VERSION_BUILDNUM)
    set(ZULU_VERSION_BUILDNUM 601)
endif()

# VERSION_STRING is consumed by RTS.RC's VERSIONINFO block (and any C/C++
# code that wants a string form). Kept alongside the numeric macros so both
# the game and the launcher read versions from one source of truth.
file(WRITE ${CMAKE_CURRENT_BINARY_DIR}/BuildVersion.h
"#pragma once

#define VERSION_MAJOR ${ZULU_VERSION_MAJOR}
#define VERSION_MINOR ${ZULU_VERSION_MINOR}
#define VERSION_BUILDNUM ${ZULU_VERSION_BUILDNUM}
#define VERSION_STRING \"${ZULU_VERSION_MAJOR}.${ZULU_VERSION_MINOR}.${ZULU_VERSION_BUILDNUM}\"
"
)

if(MSVC)
    target_link_options(z_generals PRIVATE "/NODEFAULTLIB:libci.lib")
endif()

target_include_directories(z_generals PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}
)

target_sources(z_generals PRIVATE
    WinMain.cpp
    WinMain.h
)

# RC files optional for MinGW builds
# Icon: LoadIcon() handles missing resource gracefully (uses default system icon)
# Manifest: DPI awareness metadata (nice to have but not essential)
if(MSVC)
    # VS2005 and later adds default manifest, we need to turn it off to prevent conflict with custom manifest
    if(NOT IS_VS6_BUILD)
        target_link_options(z_generals PRIVATE
            "/MANIFEST:NO"
        )
    endif()

    target_sources(z_generals PRIVATE
        RTS.RC
    )

    # RTS.RC #include's BuildVersion.h, but the top-level CMakeLists.txt
    # disables CMAKE_NINJA_CMCLDEPS_RC (required for VC6, whose cl.exe
    # rejects /showIncludes) so ninja has no automatic dep tracking for
    # RC #includes. Without the explicit OBJECT_DEPENDS below, bumping
    # APPVERSION in installer/Zulu.nsi regenerates BuildVersion.h but
    # ninja sees RTS.RC unchanged and never recompiles the .res — the
    # exe ships with the stale FILEVERSION even though the linker also
    # ran. The launcher avoids this entirely because its .rc.in goes
    # through configure_file(), which updates the .rc's own mtime.
    set_source_files_properties(RTS.RC PROPERTIES
        OBJECT_DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/BuildVersion.h")
endif()

# Strip debug symbols to separate file for MinGW Release builds
# This creates generalszh${RTS_BUILD_OUTPUT_SUFFIX}.exe.debug (similar to MSVC .pdb files)
if(MINGW AND COMMAND add_debug_strip_target)
    add_debug_strip_target(z_generals)
endif()
